# NodeApp

./: .gitignore  CMakeLists.txt  README.md  setup.py
libs/include/glad/: glad.h
libs/lib/: glfw3.lib
libs/src/glad/: glad.c
src/: imgui.ini  includes.h  main.cpp
src/app/: Application.cpp  Application.h  Renderer.cpp  Renderer.h
src/nodes/: BlendNode.cpp  BlendNode.h  BlurNode.cpp  BlurNode.h  ColorSplitterNode.cpp  ColorSplitterNode.h  ContrastNode.cpp  ContrastNode.h  ConvolutionNode.cpp  ConvolutionNode.h  EdgeNode.cpp  EdgeNode.h  Framebuffer.cpp  Framebuffer.h  ImageNode.cpp  ImageNode.h  Node.h  NodeManager.cpp  NodeManager.h  Texture.cpp  Texture.h  ThresholdNode.cpp  ThresholdNode.h  imgui.ini
src/ui/: BaseUI.h  Properties.cpp  Properties.h  Scene.cpp  Scene.h  imgui.ini
